syntax = "proto3";

message put {
  uint64 opId = 1;
  string key = 2;
  string val = 3;
}

message conditionalPut {
  uint64 opId = 1;
  string key = 2;
  string expectedVal = 3;
  string newVal = 4;
}

message get {
  uint64 opId = 1;
  string key = 2;
}
